--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingEnd="10dp"
     android:background="@drawable/bg_list_item_radius"
-    android:backgroundTint="#E0F7FD"
+    android:backgroundTint="#E6F7FB"
     android:layout_marginBottom="8dp">
 
     <ImageView
