--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -16,4 +16,8 @@
     <item android:id="@+id/menu_account"
         android:icon="@drawable/icon_user_outline"
         android:title="@string/account"/>
+
+    <item android:id="@+id/menu_setting"
+        android:icon="@drawable/icon_settings_outline"
+        android:title="@string/setting"/>
 </menu>
