--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,12 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#e30019</color>
     <color name="gray">#898989</color>
+    <color name="blue">#1877f2</color>
+    <color name="lightGray">#f4f4f4</color>
     <color name="lightBlue">#A0DEFF</color>
     <color name="lightBlue_1">#5AB2FF</color>
     <color name="lightBlue_2">#CAF4FF</color>
+    <color name="lightBlue_3">#E7F6FA</color>
     <color name="categoryBtn">#e0eefd</color>
     <color name="categoryBtnActive">#7dabf5</color>
     <color name="overlayColor">#80000000</color>
