Fix logout error, rename AccountFragment to DashboardFragment

--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -13,9 +13,9 @@
         android:icon="@drawable/icon_calendar_number_outline"
         android:title="@string/calendar" />
 
-    <item android:id="@+id/menu_account"
-        android:icon="@drawable/icon_user_outline"
-        android:title="@string/account"/>
+    <item android:id="@+id/menu_dashboard"
+        android:icon="@drawable/icon_bar_chart_outline"
+        android:title="@string/dashboard"/>
 
     <item android:id="@+id/menu_setting"
         android:icon="@drawable/icon_settings_outline"
