--- a/app/src/main/res/layout/activity_update_user_profile.xml
+++ b/app/src/main/res/layout/activity_update_user_profile.xml
@@ -15,4 +15,13 @@
         app:layout_constraintRight_toRightOf="parent"
         android:background="@drawable/bg_white" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/white">
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
