--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,7 +52,7 @@
                     android:layout_height="wrap_content"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
-                    android:drawableStart="@drawable/icon_bx_user"
+                    android:drawableStart="@drawable/icon_bx_envelope"
                     android:drawablePadding="15dp"
                     style="@style/EditText"/>
 
