--- a/app/src/main/res/layout/activity_update_user_profile.xml
+++ b/app/src/main/res/layout/activity_update_user_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".UpdateUserProfileActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -16,12 +17,119 @@
         android:background="@drawable/bg_white" />
 
     <LinearLayout
+        android:id="@+id/image_wrapper"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/white">
+        android:padding="15dp"
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/user_image"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:src="@drawable/user_no_image" />
+            <LinearLayout
+                android:id="@+id/change_image"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="-35dp"
+                android:layout_marginStart="35dp"
+                android:background="@drawable/bg_setting_icon"
+                android:backgroundTint="@color/white"
+                android:padding="2dp">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/icon_bxs_edit"
+                    android:background="@drawable/bg_setting_icon"
+                    android:padding="6dp"
+                    android:backgroundTint="@color/blue"/>
+            </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/image_wrapper"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="15dp">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btn_save_changes"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:text="Họ tên"
+                        android:textSize="17sp"
+                        android:textStyle="bold"/>
+                    <EditText
+                        android:id="@+id/user_fullname"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/edit_text_bg"
+                        android:hint="Họ tên"
+                        android:drawableStart="@drawable/icon_bx_user_blue"
+                        android:drawablePadding="20dp"
+                        style="@style/EditText"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginTop="15dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:text="Họ tên"
+                        android:textSize="17sp"
+                        android:textStyle="bold"/>
+                    <EditText
+                        android:id="@+id/user_email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/edit_text_bg"
+                        android:hint="Email"
+                        android:enabled="false"
+                        android:drawableStart="@drawable/icon_bx_envelope_blue"
+                        android:drawablePadding="20dp"
+                        style="@style/EditText"
+                        android:textColor="#6F6F6F"/>
+                </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
+
+        <Button
+            android:id="@+id/btn_save_changes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/btn_border"
+            android:text="Lưu thay đổi"
+            android:textSize="17sp"
+            app:backgroundTint="@color/blue"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
