--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -24,7 +24,8 @@
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp" />
+            android:layout_marginTop="35dp"
+            android:indeterminateTint="@color/blue"/>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
