--- a/app/src/main/res/layout/popup_create_todo.xml
+++ b/app/src/main/res/layout/popup_create_todo.xml
@@ -58,43 +58,44 @@
                     android:paddingVertical="0dp"
                     android:popupBackground="@drawable/bg_list_item"/>
 
-                <ImageButton
-                    android:id="@+id/btn_add_category"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/icon_add_outline"
-                    android:scaleType="fitCenter"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     app:layout_constraintLeft_toRightOf="@+id/category_spinner"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginStart="6dp"
-                    android:contentDescription="@string/app_name"
-                    android:backgroundTint="@color/lightBlue"/>
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="2dp">
+                    <ImageButton
+                        android:id="@+id/btn_add_category"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/icon_add_outline"
+                        android:scaleType="fitCenter"
+                        android:layout_marginStart="6dp"
+                        android:contentDescription="@string/app_name"
+                        android:backgroundTint="@color/lightBlue"/>
 
-                <ImageView
-                    android:id="@+id/btn_set_date"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/icon_bx_calendar"
-                    android:scaleType="fitCenter"
-                    app:layout_constraintLeft_toRightOf="@+id/btn_add_category"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="2dp"
-                    android:contentDescription="@string/app_name"
-                    android:backgroundTint="@android:color/transparent" />
+                    <ImageView
+                        android:id="@+id/btn_set_date"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/icon_bx_calendar"
+                        android:scaleType="fitCenter"
+                        android:layout_marginStart="10dp"
+                        android:contentDescription="@string/app_name"
+                        android:backgroundTint="@android:color/transparent" />
 
-                <ImageView
-                    android:id="@+id/btn_set_time"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/icon_bx_time_five"
-                    android:scaleType="fitCenter"
-                    app:layout_constraintLeft_toRightOf="@+id/btn_set_date"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="3dp"
-                    android:contentDescription="@string/app_name"
-                    android:backgroundTint="@android:color/transparent" />
+                    <ImageView
+                        android:id="@+id/btn_set_time"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/icon_bx_time_five"
+                        android:scaleType="fitCenter"
+                        android:layout_marginStart="5dp"
+                        android:contentDescription="@string/app_name"
+                        android:backgroundTint="@android:color/transparent" />
+                </LinearLayout>
 
                 <ImageButton
                     android:id="@+id/btn_create_todo"
